--- a/PortalCG/PortalCG/Views/Course/UploadFile.cshtml
+++ b/PortalCG/PortalCG/Views/Course/UploadFile.cshtml
@@ -14,9 +14,9 @@
     <div class="portlet light bordered">
         <div class="portlet-title">
             <div class="caption">
-                <a class="caption-subject bold uppercase font-blue-steel" href="#">
+                <span class="caption-subject bold uppercase font-blue-steel">
                     @Model.NameCourse
-                </a>
+                </span>
             </div>
         </div>
         <div class="portlet-body">
