Ajustes nos ícones do layout

--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -85,12 +85,12 @@ License: You must have a valid license purchased only from themeforest(the above
                         <ul class="nav navbar-nav">
                             <li class="dropdown dropdown-fw dropdown-fw-disabled">
                                 <a href="javascript:;" class="text-uppercase">
-                                    <i class="icon-home"></i> Inicio
+                                    <i class="icon-graduation"></i> Cursos
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-fw">
                                     <li class="dropdown more-dropdown-sub">
                                         <a href="javascript:;">
-                                            <i class="icon-bar-chart"></i> Cursos
+                                            <i class="icon-graduation"></i> Tipo
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li>
@@ -106,19 +106,19 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </li>
                                     <li class="dropdown">
                                         <a href="@Url.Action("AllDisciplines","Discipline")">
-                                            <i class="icon-bar-chart"></i> Disciplinas
+                                            <i class="icon-book-open"></i> Disciplinas
                                         </a>
                                     </li>
                                     <li class="dropdown">
                                         <a href="@Url.Action("AllTeachers","Teacher")">
-                                            <i class="icon-bar-chart"></i> Professores
+                                            <i class="icon-users"></i> Professores
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <li class="dropdown dropdown-fw dropdown-fw-disabled">
                                 <a href="javascript:;" class="text-uppercase">
-                                    <i class="icon-puzzle"></i> Institucional
+                                    <i class="fa fa-building-o"></i> Institucional
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-fw">
                                     <li class="dropdown">
