--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- BEGIN THEME LAYOUT STYLES -->
     @Styles.Render("~/Threme/css")
     <!-- END THEME LAYOUT STYLES -->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="@Url.Content("~/Content/favicon.ico")" />
 </head>
 <!-- END HEAD -->
 <body class="page-header-fixed page-sidebar-closed-hide-logo page-md">
@@ -59,7 +59,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <!-- End Toggle Button -->
                         <!-- BEGIN LOGO -->
                         <a id="index" class="page-logo" href="@Url.Action("Index","Home")">
-                            <img src="" alt="Logo">
+                            <img src="@Url.Content("~/Content/marca-topo.png")" alt="Logo">
                         </a>
                         <!-- END LOGO -->
                         <!-- BEGIN SEARCH -->
