--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-fw">
                                     <li class="dropdown">
-                                        <a href="@Url.Action("Leaders", "Institutional", new { id = (int)PortalCG.Util.Enum.TypeInstitutionalFileEnum.AUTORIZACAO })">
+                                        <a href="@Url.Action("AllLeaders", "Leader", new { id = (int)PortalCG.Util.Enum.TypeInstitutionalFileEnum.AUTORIZACAO })">
                                             <i class="fa fa-file"></i> Dirigentes
                                         </a>
                                     </li>
