--- a/PortalCG/PortalCG/Views/Shared/_LeaderPartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_LeaderPartial.cshtml
@@ -25,7 +25,7 @@
             <div class="row">
                 <br />
                 <div class="col-md-12">
-                    <a href="@Url.Action("Delete", "Leader", new { key = Model.LeaderTitle.Chave})" class="btn btn-danger btn-xs">Excluir</a>
+                    <a href="@Url.Action("Delete", "Leader", new { key = Model.LeaderTitle.Chave, isTitle = true})" class="btn btn-danger btn-xs">Excluir</a>
                     <a href="@Url.Action("Edit", "Leader", new { key = Model.LeaderTitle.Chave})" class="btn blue btn-xs">Editar</a>
                 </div>
             </div>
