--- a/PortalCG/PortalCG/Views/Leader/Create.cshtml
+++ b/PortalCG/PortalCG/Views/Leader/Create.cshtml
@@ -1,10 +1,9 @@
 ﻿@model PortalCG.Models.ViewModels.LeaderViewModel
 @{
-    ViewBag.Title = "Editar " + Model.LeaderTitle.Valor;
+    ViewBag.Title = "Novo Dirigente";
     const int ITEM_PER_ROW = 3;
-    int count = 0;
 }
-@using (Html.BeginForm("Edit", "Leader", FormMethod.Post, new { @id = "form-edit" }))
+@using (Html.BeginForm("Create", "Leader", FormMethod.Post))
 {
     <input type="hidden" id="item-per-row" value="@ITEM_PER_ROW" />
     <div class="portlet light bordered">
@@ -19,7 +18,6 @@
             <div class="course-content">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-                        @Html.HiddenFor(m => m.LeaderTitle.Chave)
                         @Html.TextBoxFor(m => m.LeaderTitle.Valor, new { @class = "form-control", @required = "required" })
                     </div>
                 </div>
@@ -27,40 +25,34 @@
         </div>
     </div>
     <div class="row" id="general-item-list">
-        @foreach (var item in Model.LeaderContentList?.Where(x => !x.Chave.Equals(Model.LeaderTitle.Chave)))
-        {
-            count++;
-            <div class="col-md-@(12/ITEM_PER_ROW)">
-                <div class="portlet light bordered">
-                    <div class="portlet-title">
-                        <div class="caption">
-                            <span class="caption-subject bold uppercase font-blue-steel searchable">
-                                Elemento #@count
-                            </span>
-                        </div>
+        <div class="col-md-@(12/ITEM_PER_ROW)">
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption">
+                        <span class="caption-subject bold uppercase font-blue-steel searchable">
+                            Novo Elemento
+                        </span>
                     </div>
-                    <div class="portlet-body">
-                        <div class="course-content">
-                            <div class="row">
-                                <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-                                    @Html.HiddenFor(m => Model.LeaderContentList[Model.LeaderContentList.IndexOf(item)].Chave)
-                                    @Html.TextBoxFor(m => Model.LeaderContentList[Model.LeaderContentList.IndexOf(item)].Valor, new { @class = "form-control" })
-                                </div>
+                </div>
+                <div class="portlet-body">
+                    <div class="course-content">
+                        <div class="row">
+                            <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
+                                <input type="text" class="form-control" name="LeaderToInsert" />
                             </div>
                         </div>
-                        <div class="course-buttons">
-                            <div class="row">
-                                <br />
-                                <div class="col-md-12">
-                                    <input type="hidden" value="@item.Chave" class="key-remove" />
-                                    <a class="btn btn-danger btn-xs btn-remove">Excluir</a>
-                                </div>
+                    </div>
+                    <div class="course-buttons">
+                        <div class="row">
+                            <br />
+                            <div class="col-md-12">                                
+                                <a class="btn btn-danger btn-xs btn-remove-new">Excluir</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        }
+        </div>
         <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
