Alterado as labels "Professor" por "Docente"

--- a/PortalCG/PortalCG/Views/Course/DetailsCourse.cshtml
+++ b/PortalCG/PortalCG/Views/Course/DetailsCourse.cshtml
@@ -80,7 +80,7 @@
 <div class="row">
     <div class="col-md-12">
         <h4 class="caption-subject bold uppercase font-blue-steel">
-            Professores
+            Docentes
             <hr />
         </h4>
         @if (Model.TeacherList?.Count > 0)
