--- a/PortalCG/PortalCG/Views/Discipline/AllTeachers.cshtml
+++ b/PortalCG/PortalCG/Views/Discipline/AllTeachers.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PortalCG.Models.ViewModels.TeacherIndexViewModel
 @{
-    ViewBag.Title = "Professores da disciplina " + Model.Discipline.Nome;
+    ViewBag.Title = "Docentes da disciplina " + Model.Discipline.Nome;
     Layout = "~/Views/Shared/_Layout.cshtml";
     const int ITEM_PER_ROW = 3;
 }
