--- a/PortalCG/PortalCG/Views/Teacher/AllDisciplines.cshtml
+++ b/PortalCG/PortalCG/Views/Teacher/AllDisciplines.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PortalCG.Models.ViewModels.DisciplineIndexViewModel
 @{
-    ViewBag.Title = "Disciplinas do Professor " + Model.Teacher.Nome;
+    ViewBag.Title = "Disciplinas do(a) Docente " + Model.Teacher.Nome;
     Layout = "~/Views/Shared/_Layout.cshtml";
     const int ITEM_PER_ROW = 3;
 }
