--- a/PortalCG/PortalCG/Views/Teacher/AllTeachers.cshtml
+++ b/PortalCG/PortalCG/Views/Teacher/AllTeachers.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<PortalCG.Models.JsonModels.Teacher>
 @{
-    ViewBag.Title = "Professores";
+    ViewBag.Title = "Docentes";
     const int ITEM_PER_ROW = 3;
 }
 @if (Model?.Count > 0)
