--- a/PortalCG/PortalCG/Views/Course/AllTeachers.cshtml
+++ b/PortalCG/PortalCG/Views/Course/AllTeachers.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PortalCG.Models.ViewModels.TeacherIndexViewModel
 @{
-    ViewBag.Title = "Professores do curso " + Model.Course.Nome;
+    ViewBag.Title = "Docentes do curso " + Model.Course.Nome;
     Layout = "~/Views/Shared/_Layout.cshtml";
     const int ITEM_PER_ROW = 3;
 }
