--- a/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
@@ -26,7 +26,7 @@
                 <div class="col-md-12">
                     @if (Model.ShowTeachers)
                     {
-                        <a href="@Url.Action("AllTeachers","Discipline", new { code = Model.Codigo})" class="btn blue btn-xs">Professores</a>
+                        <a href="@Url.Action("AllTeachers","Discipline", new { code = Model.Codigo})" class="btn blue btn-xs">Docentes</a>
                     }
                     <a href="@Url.Action("UploadFile", "Discipline", new { codeDiscipline = Model.Codigo, disciplineName = Model.Nome, courseOption = Model.CourseOptionRoute, codeCourse = Model.CodeCourse, option = Model.OptionRoute, codeTeacher = Model.CodeTeacher})" class="btn blue btn-xs">Arquivos</a>
                 </div>
