--- a/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </li>
                                     <li class="dropdown">
                                         <a href="@Url.Action("AllTeachers","Teacher")">
-                                            <i class="icon-users"></i> Professores
+                                            <i class="icon-users"></i> Docentes
                                         </a>
                                     </li>
                                 </ul>
