--- a/ProjetosAndroid/TP2/app/src/main/res/layout/layout_home.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/layout/layout_home.xml
@@ -26,8 +26,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/fundodois">
+            android:background="@drawable/fundodois"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnShowStudentManual"
