--- a/ProjetosAndroid/TP2/app/src/main/res/layout/layout_teacher.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/layout/layout_teacher.xml
@@ -1,51 +1,52 @@
-<android.support.v7.widget.CardView android:id="@+id/card_view"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="5dp"
-    app:contentPadding="5sp"
-    app:cardBackgroundColor="@color/md_white_1000"
-    android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginTop="20dp"
+    app:cardBackgroundColor="@color/md_white_1000"
+    app:cardCornerRadius="5dp"
+    app:contentPadding="5sp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="20dp">
 
         <TextView
-            android:text=""
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/textViewNameTeacher"
-            android:textSize="20dp"
-            android:textColor="@color/md_grey_900"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/md_grey_900"
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:text="@string/code"
-                android:textSize="12dp"
                 android:textColor="@color/md_grey_900"
-                android:layout_marginTop="10dp"/>
+                android:textSize="12dp"
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textViewCodeTeacher"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textViewCodeTeacher"
-                android:text=""
-                android:textSize="12dp"
-                android:textColor="@color/md_grey_900"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:text=""
+                android:textColor="@color/md_grey_900"
+                android:textSize="12dp" />
 
         </LinearLayout>
 
@@ -55,42 +56,42 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:text="@string/hiring"
-                android:textSize="12dp"
                 android:textColor="@color/md_grey_900"
-                android:id="@+id/textView2" />
+                android:textSize="12dp"
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textViewHiring"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textViewHiring"
+                android:layout_marginLeft="10dp"
                 android:text="Noturno"
-                android:textSize="12dp"
                 android:textColor="@color/md_grey_900"
-                android:layout_marginLeft="10dp"/>
+                android:textSize="12dp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnShowDiscipline"
-                android:text="@string/disciplines"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="8dp"
-                android:layout_weight="1"
                 android:layout_marginRight="190dp"
+                android:layout_weight="1"
+                android:background="@color/md_indigo_700"
+                android:text="@string/disciplines"
                 android:textColor="@color/md_white_1000"
-                android:background="@color/md_indigo_700"/>
+                android:textSize="8dp" />
 
         </LinearLayout>
 
