Ajustes para tornar requerido o arquivo institucional ao fazer o upload.

--- a/PortalCG/PortalCG/Views/Institutional/UploadFile.cshtml
+++ b/PortalCG/PortalCG/Views/Institutional/UploadFile.cshtml
@@ -31,7 +31,7 @@
                                     <span class="input-group-addon btn default btn-file">
                                         <span class="fileinput-new"> Selecionar Arquivo </span>
                                         <span class="fileinput-exists"> Alterar </span>
-                                        <input type="file" name="File" accept="application/pdf">
+                                        <input type="file" name="File" required accept="application/pdf">
                                     </span>
                                     <a href="javascript:;" class="input-group-addon btn red fileinput-exists" data-dismiss="fileinput"> Remover </a>
                                 </div>
