Ajustes no app: Aplicada alterações para ocultar elementos solicitado pelo cliente; Removido imagem de fundo do layout_home

--- a/ProjetosAndroid/TP2/app/src/main/res/layout/layout_course.xml
+++ b/ProjetosAndroid/TP2/app/src/main/res/layout/layout_course.xml
@@ -27,32 +27,7 @@
             android:textSize="20dp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="@string/code"
-                android:textColor="@color/md_grey_900"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textViewCodeCourse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text=""
-                android:textColor="@color/md_grey_900"
-                android:textSize="12dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
+            android:id="@+id/linear_MonthlyPayment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -127,6 +102,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linear_MECEvaluation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -217,7 +193,8 @@
                 android:background="@color/md_indigo_700"
                 android:text="@string/authorization_act"
                 android:textColor="@color/md_white_1000"
-                android:textSize="8dp" />
+                android:textSize="8dp"
+                />
 
             <Button
                 android:id="@+id/btnShowCoursePedagogicalPlan"
