--- a/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
@@ -14,7 +14,7 @@
         <div class="course-content">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-                    @Html.LabelFor(m => m.CH, new { @class = "bold" })
+                    @Html.Label("Carga Horária", new { @class = "bold" })
                     :
                     @Model.CH
                 </div>
