--- a/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_TeacherPartial.cshtml
@@ -14,7 +14,7 @@
         <div class="course-content">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-                    @Html.LabelFor(m => m.ModContrato, new { @class = "bold" })
+                    @Html.Label("Regime", new { @class = "bold" })
                     :
                     @Model.ModContrato
                 </div>
