--- a/PortalCG/PortalCG/Views/Institutional/UploadFile.cshtml
+++ b/PortalCG/PortalCG/Views/Institutional/UploadFile.cshtml
@@ -19,24 +19,18 @@
         </div>
         <div class="portlet-body">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="fileinput fileinput-new" data-provides="fileinput">
-                                <div class="input-group input-large">
-                                    <div class="form-control uneditable-input input-medium" data-trigger="fileinput">
-                                        <i class="fa fa-file fileinput-exists"></i>&nbsp;
-                                        <span class="fileinput-filename"> </span>
-                                    </div>
-                                    <span class="input-group-addon btn default btn-file">
-                                        <span class="fileinput-new"> Selecionar Arquivo </span>
-                                        <span class="fileinput-exists"> Alterar </span>
-                                        <input type="file" name="File" required accept="application/pdf">
-                                    </span>
-                                    <a href="javascript:;" class="input-group-addon btn red fileinput-exists" data-dismiss="fileinput"> Remover </a>
-                                </div>
-                            </div>
+                <div class="col-md-12">
+                    <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+                        <div class="form-control" data-trigger="fileinput">
+                            <i class="fa fa-file fileinput-exists"></i>&nbsp;
+                            <span class="fileinput-filename"> </span>
                         </div>
+                        <span class="input-group-addon btn default btn-file">
+                            <span class="fileinput-new"> Selecionar Arquivo </span>
+                            <span class="fileinput-exists"> Alterar </span>
+                            <input type="file" name="File" required accept="application/pdf">
+                        </span>
+                        <a href="javascript:;" class="input-group-addon btn red fileinput-exists" data-dismiss="fileinput"> Remover </a>
                     </div>
                 </div>
             </div>
